Config Update: Hunger Overhaul: Disable some nerfs INPureCore: Hide Microblocks HQM: Update Quests Mystcraft: Disable some entity spawning liquid symbols

--- a/minecraft/config/IguanaTinkerTweaks/main.cfg
+++ b/minecraft/config/IguanaTinkerTweaks/main.cfg
@@ -235,7 +235,7 @@ toolleveling {
     B:detailedXpTooltip=true
 
     #  [range: 1 ~ 99, default: 6]
-    I:maxToolLevel=8
+    I:maxToolLevel=10
 
     # Current XP% is shown after the level [default: false]
     B:showMinimalTooltipXP=false
@@ -298,7 +298,7 @@ tweaks {
     B:disableRegularTools=false
 
     # Stone Tools can only be used to create casts, but no tools [default: true]
-    B:disableStoneTools=true
+    B:disableStoneTools=false
 
     # Allows to craft tool parts with a pattern and the material in any crafting grid. [default: false]
     B:easyPartCrafting=false
@@ -319,7 +319,7 @@ tweaks {
     B:moreExpensiveSilkyCloth=true
 
     # Silky Jewel needs an emerald block, instead of one emerald [default: false]
-    B:moreExpensiveSilkyJewel=false
+    B:moreExpensiveSilkyJewel=true
 
     # Flux modifier requires 2 Modifiers. Because that stuff is broken. [default: true]
     B:moreModifiersForFlux=true
