--- a/minecraft/config/mystcraft/symbols.cfg
+++ b/minecraft/config/mystcraft/symbols.cfg
@@ -147,7 +147,7 @@ symbol {
     B:modmat_fluid.mfr.steam.still.enabled=true
     B:modmat_tile.blockfluiddeath.enabled=true
     B:modmat_tile.blockfluidpure.enabled=true
-    B:modmat_tile.blockfluxgoo.enabled=true
+    B:modmat_tile.blockfluxgoo.enabled=false
     B:modmat_tile.blockfuel.enabled=true
     B:modmat_tile.blockoil.enabled=true
     B:modmat_tile.blockredplasma.enabled=true
