--- a/minecraft/config/HungerOverhaul.cfg
+++ b/minecraft/config/HungerOverhaul.cfg
@@ -1,4 +1,4 @@
-# Configuration file
+﻿# Configuration file
 
 ##########################################################################################################
 # custom field
@@ -29,52 +29,52 @@
 
 delays {
     # Multiplier applied to the delay between breeding entities
-    I:breedingTimeoutMultiplier=4
+    I:breedingTimeoutMultiplier=2
 
     # Multiplier on the time it takes cactus to grow
     I:cactusRegrowthMultiplier=4
 
     # Multiplier applied to the delay before children become adults
-    I:childDurationMultiplier=4
+    I:childDurationMultiplier=1
 
     # Multiplier on the time it takes cocoa to grow
-    I:cocoaRegrowthMultiplier=4
+    I:cocoaRegrowthMultiplier=2
 
     # Multiplier on the time it takes a non-tree crop to grow
-    I:cropRegrowthMultiplier=4
+    I:cropRegrowthMultiplier=1
 
     # Multiplier on the time it takes food to dry on Tinkers' Construct drying racks
-    I:dryingRackTimeMultiplier=4
+    I:dryingRackTimeMultiplier=1
 
     # Multiplier applied to the delay between chicken egg laying
-    I:eggTimeoutMultiplier=4
+    I:eggTimeoutMultiplier=2
 
     # Multiplier on the time it takes a WeeeFlower crop to grow
     I:flowerRegrowthMultiplier=1
 
     # Delay (in minutes) after milking a cow before it can be milked again
-    I:milkedTimeout=20
+    I:milkedTimeout=10
 
     # Multiplier on the time it takes nether wart to grow
     I:netherWartRegrowthMultiplier=4
 
     # Multipier on crop growth time without sunlight (1 to disable feature, 0 to make crops only grow in sunlight)
-    I:noSunlightRegrowthMultiplier=2
+    I:noSunlightRegrowthMultiplier=4
 
     # Multiplier on the time it takes a sapling to grow into a tree
     I:saplingRegrowthMultiplier=4
 
     # Multiplier on the time it takes sugarcane to grow
-    I:sugarcaneRegrowthMultiplier=4
+    I:sugarcaneRegrowthMultiplier=2
 
     # Multiplier on the time it takes a tree crop to grow
-    I:treeCropRegrowthMultiplier=4
+    I:treeCropRegrowthMultiplier=1
 
     # Multipier on crop growth time (except sugarcane) in the wrong biome (1 to disable feature, 0 to make crops only grow in correct biome)
-    I:wrongBiomeRegrowthMultiplier=2
+    I:wrongBiomeRegrowthMultiplier=1
 
     # Multipier on sugarcane growth time in the wrong biome (1 to disable feature, 0 to make sugarcane only grow in correct biome)
-    I:wrongBiomeRegrowthMultiplierSugarcane=2
+    I:wrongBiomeRegrowthMultiplierSugarcane=1
 }
 
 
@@ -128,10 +128,10 @@ food {
     B:modifyFoodEatingSpeed=true
 
     # Changes the stack size of food to be dependant on the food's replenishment value
-    B:modifyFoodStackSize=true
+    B:modifyFoodStackSize=false
 
     # Changes the replenishment value of vanilla and HarvestCraft foods
-    B:modifyFoodValues=true
+    B:modifyFoodValues=false
 }
 
 
@@ -155,7 +155,7 @@ food {
     B:removeHoeRecipes=true
 
     # Removes seed drops when breaking tall grass
-    B:removeTallGrassSeeds=true
+    B:removeTallGrassSeeds=false
 
     # Chance for seed to drop from hoe use on normal difficulty
     I:seedChance=20
@@ -189,7 +189,7 @@ harvestcraft {
     I:chestLootMaxStackSize=64
 
     # Makes HarvestCraft foods unplantable, meaning seeds are required to plant crops
-    B:foodsUnplantable=true
+    B:foodsUnplantable=false
 }
 
 
