--- a/Description
+++ b/Description
@@ -1,4 +1,8 @@
 You have been asked to run an abandoned factory by the ruler of the land, Lord Dalamar. 
 You'll need to mine the few resources that the land has left, build power infrastructure, automate production of many items, 
 and fight powerful enemies. Exploring the factory will reveal secrets of it's past, but be careful what you find, 
-Lord Dalamar is watching. 
+Lord Dalamar is watching.
+
+Permissions: https://onedrive.live.com/redir?resid=5BCB56E2494B1BF9!160973&authkey=!ALV_-ElVLWgsB4g&ithint=file%2cxlsx
+
+Download the pack on the FTB Launcher using the pack code: automata
