--- a/Description
+++ b/Description
@@ -1,8 +1,1 @@
-You have been asked to run an abandoned factory by the ruler of the land, Lord Dalamar. 
-You'll need to mine the few resources that the land has left, build power infrastructure, automate production of many items, 
-and fight powerful enemies. Exploring the factory will reveal secrets of it's past, but be careful what you find, 
-Lord Dalamar is watching.
-
-Permissions: https://onedrive.live.com/redir?resid=5BCB56E2494B1BF9!160973&authkey=!ALV_-ElVLWgsB4g&ithint=file%2cxlsx
-
-Download the pack on the FTB Launcher using the pack code: automata
+Take control of an abandoned factory to produce and automate all kinds of items for the ruler of the land, Lord Dalamar. Be careful though, he is keeping an eye on you. Your actions will effect your reputation and what quests are available. Do as he says and you'll get more rewards. If you turn against him and quests may become even tougher.
