--- a/minecraft/config/NEI/client.cfg
+++ b/minecraft/config/NEI/client.cfg
@@ -60,6 +60,7 @@ neiplugins
 {
 	developer.showOreDictionaryNames=false
 	developer.showUsageInOreDictionary=true
+	fueltooltip.showTooltipInFluidRegistry=false
 }
 
 tools
