--- a/minecraft/config/powercrystals/minefactoryreloaded/common.cfg
+++ b/minecraft/config/powercrystals/minefactoryreloaded/common.cfg
@@ -16,6 +16,7 @@ Machine {
         # A list of entity IDs (e.g.: CaveSpider or VillagerGolem or Forestry.butterflyGE) to blacklist from the AutoSpawner. The Debugger item will display an entity's ID when used.
         S:Blacklist <
             VillagerGolem
+            Forestry.butterflyGE
          >
         B:Recipe.Enabled=true
 
@@ -187,7 +188,7 @@ Machine {
 
     AutoEnchanter {
         # The energy cost for this machine to complete one work cycle, in units of 10 RF (i.e., 2 DaRF = 20 RF)
-        I:ActivationCostDaRF=16
+        I:ActivationCostDaRF=1600
         B:Recipe.Enabled=true
     }
 
@@ -323,10 +324,10 @@ RecipeSets {
     B:EnderIO=false
 
     # If true, MFR will register its Thermal Expansion-based recipes.
-    B:ThermalExpansion=false
+    B:ThermalExpansion=true
 
     # If true, MFR will register its standard (vanilla-item-only) recipes.
-    B:Vanilla=true
+    B:Vanilla=false
 }
 
 
