--- a/minecraft/config/InfernalMobs.cfg
+++ b/minecraft/config/InfernalMobs.cfg
@@ -25,7 +25,7 @@ entitiesalwaysinfernal {
     B:EntityEldritchGuardian=false
     B:EntityEnderCreeper=false
     B:EntityEnderman=false
-    B:EntityFighterGhast=false
+    B:EntityFighterGhast=true
     B:EntityFireBat=true
     B:EntityFireCreeper=false
     B:EntityFireSkeleton=false
@@ -34,7 +34,7 @@ entitiesalwaysinfernal {
     B:EntityFishingZombie=false
     B:EntityFlyingSpider=false
     B:EntityGatlingSkeleton=false
-    B:EntityGhast=false
+    B:EntityGhast=true
     B:EntityGhostSpider=false
     B:EntityGiantBrainyZombie=false
     B:EntityGiantPigZombie=false
@@ -47,7 +47,7 @@ entitiesalwaysinfernal {
     B:EntityHungryZombie=false
     B:EntityIcyEnderman=false
     B:EntityJumpingCreeper=false
-    B:EntityKingGhast=false
+    B:EntityKingGhast=true
     B:EntityLightningCreeper=false
     B:EntityLightningEnderman=false
     B:EntityMagmaCube=false
@@ -60,12 +60,12 @@ entitiesalwaysinfernal {
     B:EntityPaleSpider=false
     B:EntityPech=false
     B:EntityPigZombie=false
-    B:EntityPinkSlime=false
+    B:EntityPinkSlime=true
     B:EntityPlaguePigZombie=false
     B:EntityPlagueZombie=false
     B:EntityPoisonSkeleton=false
     B:EntityPoisonSpider=false
-    B:EntitySilverfish=false
+    B:EntitySilverfish=true
     B:EntitySkeleton=false
     B:EntitySlime=false
     B:EntitySmallSpider=false
@@ -84,7 +84,7 @@ entitiesalwaysinfernal {
     B:EntityThiefSkeleton=false
     B:EntityToughSilverfish=false
     B:EntityToughSpider=false
-    B:EntityUnholyGhast=false
+    B:EntityUnholyGhast=true
     B:EntityWebSpider=false
     B:EntityWisp=false
     B:EntityWitch=false
@@ -120,6 +120,7 @@ entitybasehealth {
     D:EntityDirtCreeper=20.0
     D:EntityDoomCreeper=20.0
     D:EntityDrowningCreeper=40.0
+    D:EntityEldritchGuardian=50.0
     D:EntityEnderCreeper=40.0
     D:EntityEnderman=40.0
     D:EntityFireBat=5.0
@@ -213,36 +214,16 @@ general {
     B:"MM_Weakness enabled"=true
     B:"MM_Webber enabled"=false
     B:"MM_Wither enabled"=true
-
-    # Disables the ingame Health and Name overlay
     B:disableGUIoverlay=false
-
-    # List of equally likely to drop Items for Elites, seperated by commas, syntax: ID-meta-stackSize-stackSizeRandomizer, everything but ID is optional, see changelog
     S:droppedItemIDsElite=iron_shovel,iron_pickaxe,iron_axe,iron_sword,iron_hoe,chainmail_helmet,chainmail_chestplate,chainmail_leggings,chainmail_boots,iron_helmet,iron_chestplate,iron_leggings,iron_boots,cookie-0-6
-
-    # List of equally likely to drop Items for Infernals, seperated by commas, syntax: ID-meta-stackSize-stackSizeRandomizer, everything but ID is optional, see changelog
     S:droppedItemIDsInfernal=diamond-0-3,diamond_sword,diamond_shovel,diamond_pickaxe,diamond_axe,diamond_hoe,chainmail_helmet,chainmail_chestplate,chainmail_leggings,chainmail_boots,diamond_helmet,diamond_chestplate,diamond_leggings,diamond_boots,ender_pearl,enchanted_book
-
-    # List of equally likely to drop Items for Ultras, seperated by commas, syntax: ID-meta-stackSize-stackSizeRandomizer, everything but ID is optional, see changelog
     S:droppedItemIDsUltra=bow,iron_hoe,chainmail_helmet,chainmail_chestplate,chainmail_leggings,chainmail_boots,iron_helmet,iron_chestplate,iron_leggings,iron_boots,golden_helmet,golden_chestplate,golden_leggings,golden_boots,golden_apple,blaze_powder-0-3,enchanted_book
-
-    # One in THIS many Mobs will become atleast rare
     I:eliteRarity=70
-
-    # One in THIS many already ultra Mobs will become infernal
     I:infernoRarity=70
-
-    # highest amount of damage an Infernal Mob or reflecting Mod will do in a single strike
     D:maxOneShotDamage=10.0
     D:mobFarmDamageThreshold=150.0
-
-    # Multiplier applied ontop of all of the modified Mobs health
     S:mobHealthFactor=1.0
-
-    # One in THIS many already rare Mobs will become atleast ultra
     I:ultraRarity=50
-
-    # Use Entity class names instead of ingame Entity names for the config
     B:useSimpleEntityClassnames=true
 }
 
