--- a/minecraft/config/TSteelworks.cfg
+++ b/minecraft/config/TSteelworks.cfg
@@ -28,7 +28,7 @@
 
 equipables {
     # Enables steel armor
-    B:"Steel Armor Enabler"=true
+    B:"Steel Armor Enabler"=false
 }
 
 
@@ -37,7 +37,7 @@ equipables {
     B:"Enable Duct Vacuum"=false
 
     # Number of ingots returned from smelting ores in the High Oven
-    D:"Ingots per ore"=2.0
+    D:"Ingots per ore"=3.0
 
     # Steam maximum production rate per tick per layer (in mB). Let's not render railcraft's boilers useless, set to 0 to disable steam production
     # 18 is ~2 TE4 steam dynamos with 6 layers
@@ -66,13 +66,13 @@ tsteelification {
     B:"Hardcore Anvil"=false
 
     # Flint & Steel requires steel ingot
-    B:"Hardcore Flint & Steel"=false
+    B:"Hardcore Flint & Steel"=true
 }
 
 
 "world generation" {
     # Allow limestone to generate (usually under rivers and oceans)
-    B:Limestone=true
+    B:Limestone=false
 }
 
 
