--- a/minecraft/config/simplyjetpacks.cfg
+++ b/minecraft/config/simplyjetpacks.cfg
@@ -61,6 +61,12 @@
     # The speed of the jetpack when flying sideways. This is mostly noticeable in hover mode.
     D:"Sideways Speed"=0.21
 
+    # How much more energy the jetpack will use when sprinting. Setting this to 1.0 will make sprinting have no effect on energy usage.
+    D:"Sprint Energy Modifier"=1.0
+
+    # How much faster the jetpack will fly forward when sprinting. Setting this to 1.0 will make sprinting have no effect apart from the added speed from vanilla.
+    D:"Sprint Speed Modifier"=2.5
+
     # The vertical acceleration of the jetpack when flying; every tick, this amount of vertical speed will be added until the jetpack reaches the maximum speed.
     D:"Vertical Acceleration"=0.15
 
@@ -169,6 +175,12 @@
     # The amount of energy that the jetpack uses every tick when flying.
     I:"Energy Usage per Tick"=45
 
+    # How much more energy the jetpack will use when sprinting. Setting this to 1.0 will make sprinting have no effect on energy usage.
+    D:"Sprint Energy Modifier"=1.0
+
+    # How much faster the jetpack will fly forward when sprinting. Setting this to 1.0 will make sprinting have no effect apart from the added speed from vanilla.
+    D:"Sprint Speed Modifier"=1.0
+
     # The vertical acceleration of the jetpack when flying; every tick, this amount of vertical speed will be added until the jetpack reaches the maximum speed.
     D:"Vertical Acceleration"=0.5
 
@@ -204,6 +216,12 @@
 
     # The speed of the jetpack when flying sideways. This is mostly noticeable in hover mode.
     D:"Sideways Speed"=0.0
+
+    # How much more energy the jetpack will use when sprinting. Setting this to 1.0 will make sprinting have no effect on energy usage.
+    D:"Sprint Energy Modifier"=1.0
+
+    # How much faster the jetpack will fly forward when sprinting. Setting this to 1.0 will make sprinting have no effect apart from the added speed from vanilla.
+    D:"Sprint Speed Modifier"=1.0
 
     # The vertical acceleration of the jetpack when flying; every tick, this amount of vertical speed will be added until the jetpack reaches the maximum speed.
     D:"Vertical Acceleration"=0.1
@@ -247,6 +265,12 @@
     # The speed of the jetpack when flying sideways. This is mostly noticeable in hover mode.
     D:"Sideways Speed"=0.08
 
+    # How much more energy the jetpack will use when sprinting. Setting this to 1.0 will make sprinting have no effect on energy usage.
+    D:"Sprint Energy Modifier"=1.0
+
+    # How much faster the jetpack will fly forward when sprinting. Setting this to 1.0 will make sprinting have no effect apart from the added speed from vanilla.
+    D:"Sprint Speed Modifier"=1.0
+
     # The vertical acceleration of the jetpack when flying; every tick, this amount of vertical speed will be added until the jetpack reaches the maximum speed.
     D:"Vertical Acceleration"=0.12
 
@@ -289,6 +313,12 @@
     # The speed of the jetpack when flying sideways. This is mostly noticeable in hover mode.
     D:"Sideways Speed"=0.14
 
+    # How much more energy the jetpack will use when sprinting. Setting this to 1.0 will make sprinting have no effect on energy usage.
+    D:"Sprint Energy Modifier"=3.0
+
+    # How much faster the jetpack will fly forward when sprinting. Setting this to 1.0 will make sprinting have no effect apart from the added speed from vanilla.
+    D:"Sprint Speed Modifier"=1.3
+
     # The vertical acceleration of the jetpack when flying; every tick, this amount of vertical speed will be added until the jetpack reaches the maximum speed.
     D:"Vertical Acceleration"=0.13
 
@@ -330,6 +360,12 @@
 
     # The speed of the jetpack when flying sideways. This is mostly noticeable in hover mode.
     D:"Sideways Speed"=0.19
+
+    # How much more energy the jetpack will use when sprinting. Setting this to 1.0 will make sprinting have no effect on energy usage.
+    D:"Sprint Energy Modifier"=5.0
+
+    # How much faster the jetpack will fly forward when sprinting. Setting this to 1.0 will make sprinting have no effect apart from the added speed from vanilla.
+    D:"Sprint Speed Modifier"=1.8
 
     # The vertical acceleration of the jetpack when flying; every tick, this amount of vertical speed will be added until the jetpack reaches the maximum speed.
     D:"Vertical Acceleration"=0.14
@@ -375,6 +411,12 @@
 
     # The speed of the jetpack when flying sideways. This is mostly noticeable in hover mode.
     D:"Sideways Speed"=0.21
+
+    # How much more energy the jetpack will use when sprinting. Setting this to 1.0 will make sprinting have no effect on energy usage.
+    D:"Sprint Energy Modifier"=8.0
+
+    # How much faster the jetpack will fly forward when sprinting. Setting this to 1.0 will make sprinting have no effect apart from the added speed from vanilla.
+    D:"Sprint Speed Modifier"=2.4
 
     # The vertical acceleration of the jetpack when flying; every tick, this amount of vertical speed will be added until the jetpack reaches the maximum speed.
     D:"Vertical Acceleration"=0.15
