--- a/minecraft/config/HungerOverhaul.cfg
+++ b/minecraft/config/HungerOverhaul.cfg
@@ -1,4 +1,4 @@
-# Configuration file
+﻿# Configuration file
 
 ##########################################################################################################
 # custom field
@@ -125,7 +125,7 @@ food {
     I:modFoodValueDivider=2
 
     # Changes the eating animation speed to be dependant on the food's replenishment value
-    B:modifyFoodEatingSpeed=true
+    B:modifyFoodEatingSpeed=false
 
     # Changes the stack size of food to be dependant on the food's replenishment value
     B:modifyFoodStackSize=false
