--- a/minecraft/config/TinkersConstruct.cfg
+++ b/minecraft/config/TinkersConstruct.cfg
@@ -125,16 +125,16 @@ worldgen {
     I:"Aluminum Bush Density"=2
     I:"Aluminum Bush Max Y"=60
     I:"Aluminum Bush Min Y"=0
-    I:"Aluminum Bush Rarity"=2
-    I:"Aluminum Surface Rarity"=50
+    I:"Aluminum Bush Rarity"=6
+    I:"Aluminum Surface Rarity"=100
     I:"Aluminum Underground Density"=3
     I:"Aluminum Underground Max Y"=64
     I:"Aluminum Underground Min Y"=0
-    I:"Cobalt Surface Rarity"=2000
+    I:"Cobalt Surface Rarity"=20000
     I:"Copper Bush Density"=2
     I:"Copper Bush Max Y"=60
     I:"Copper Bush Min Y"=20
-    I:"Copper Bush Rarity"=3
+    I:"Copper Bush Rarity"=6
 
     # Rarity: 1/num to generate in chunk
     I:"Copper Surface Rarity"=100
@@ -143,12 +143,12 @@ worldgen {
     I:"Copper Underground Density"=2
     I:"Copper Underground Max Y"=60
     I:"Copper Underground Min Y"=20
-    I:"Essence Bush Rarity"=6
+    I:"Essence Bush Rarity"=12
     I:"Gold Bush Density"=1
-    I:"Gold Bush Rarity"=8
+    I:"Gold Bush Rarity"=10
     I:"Gold Surface Rarity"=900
     I:"Iron Bush Density"=1
-    I:"Iron Bush Rarity"=5
+    I:"Iron Bush Rarity"=6
     I:"Iron Surface Rarity"=400
     I:"Nether Ores Density"=8
     I:"Silver Bush Density"=1
@@ -156,7 +156,7 @@ worldgen {
     I:"Tin Bush Density"=2
     I:"Tin Bush Max Y"=40
     I:"Tin Bush Min Y"=0
-    I:"Tin Bush Rarity"=3
+    I:"Tin Bush Rarity"=6
     I:"Tin Surface Rarity"=100
     I:"Tin Underground Density"=2
     I:"Tin Underground Max Y"=40
@@ -174,11 +174,11 @@ worldgen {
     B:"Generate Essence Bushes"=true
     B:"Generate Gold Bushes"=true
     B:"Generate Iron Bushes"=true
-    B:"Generate Surface Aluminum"=true
-    B:"Generate Surface Copper"=true
-    B:"Generate Surface Gold"=true
-    B:"Generate Surface Iron"=true
-    B:"Generate Surface Tin"=true
+    B:"Generate Surface Aluminum"=false
+    B:"Generate Surface Copper"=false
+    B:"Generate Surface Gold"=false
+    B:"Generate Surface Iron"=false
+    B:"Generate Surface Tin"=false
     B:"Generate Tin"=false
     B:"Generate Tin Bushes"=true
 }
